--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: "Ubuntu";
+	src: url("fonts/Ubuntu/Ubuntu-Light.ttf");
+}
+
+
 body {
 	display: flex;
 	flex-direction: row;
@@ -6,26 +12,88 @@ body {
 	width: 100vw;
 	height: 100vh;
 
+	font-family: "Ubuntu";
 	background: #181a1e;
 }
 
-.section {
+.section:not(#game-section) {
 	flex: 1;
+	background: #15161b;
 }
 
+
 #left-section {
-	background: rgba(255, 0, 0, 0.15);
+	display: flex;
+	flex-direction: column;
+
+	color: #eeebea;
 }
+
+header {
+	display: flex;
+	justify-content: center;
+	align-items: baseline;
+
+	padding: 20px 0 28px 0;
+	min-width: 240px;
+}
+
+header h1 {
+	margin: 0 8px 0 0;
+}
+
+header span {
+	display: block;
+
+	color: #aaa;
+	font-size: 16px;
+}
+
+@media screen and (max-width: 1450px) {
+	header span {
+		display: none;
+	}
+}
+
+
+#options {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	margin: 20px 16% 0 14%;
+}
+
+#options h2 {
+	margin: 8px 0 0 16px;
+}
+
+#options > div {
+	display: flex;
+	flex-direction: column;
+
+	width: 100%;
+
+	margin-bottom: 24px;
+	padding: 8px 0;
+}
+
+#options > div > h3 {
+	margin: 0 0 8px 0;
+	font-size: 17px;
+}
+
 
 #game-section {
 	flex: 3;
 }
 
-#right-section {
-	background: rgba(255, 0, 0, 0.15);
-}
-
 canvas {
 	width: 100%;
 	height: 100%;
+}
+
+
+#right-section {
+	/* TODO */
 }
