Work on interactive options, a few QOL improvements
- All mines will now be revealed on a game loss
- The Game object now emits a 'start' event when the player first clicks on a new board
- New button to start a new game with the current settings

--- a/src/style.css
+++ b/src/style.css
@@ -83,6 +83,23 @@ header span {
 	font-size: 17px;
 }
 
+#options span {
+	margin-top: 6px;
+}
+
+
+#start-container {
+	display: flex;
+	justify-content: center;
+
+	margin-top: 8px;
+}
+
+#start {
+	width: 112px;
+	height: 32px;
+}
+
 
 #game-section {
 	flex: 3;
